Add more documentation and a bit of cleanup
